# birdsong_recognition

./: .gitignore  data.py  dataset.ipynb  pyproject.toml  requirements.txt  spectrogram_model.py  tfrecord_conversion.py  train_test.py  yamnet.py  yamnet_baseline.ipynb  yamnet_baseline_error_analysis.ipynb  yamnet_baseline_preprocessing_fns.ipynb  yamnet_finetune.py  yamnet_test.ipynb
deploy/: algo.py  audio_app.py
leaf_audio_baselines/: data.py  train.py
leaf_audio_baselines/configs/: common.gin
test_model_all_birds_v2/: saved_model.pb
test_model_all_birds_v2/variables/: variables.index
xeno_canto_uk/: audio_cleaning.py  conversion_errors.json  data_conversion.py  ebird_request.py  uk_common_birds.csv  uk_common_birds_all.csv  xeno_canto_birds_data_download.py  xeno_canto_birds_data_download_v2.py  xeno_canto_eu_errors.csv  xeno_canto_metadata_scraper.py  xeno_canto_scraper.py
