[tool.poetry]
name = "birdsong_recongition"
version = "0.1.0"
description = ""
authors = ["wwymak <wwymak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
pandas = "^1.2.3"
seaborn = "^0.11.1"
jupyter = "^1.0.0"
ipykernel = "^5.5.0"
librosa = "^0.8.0"
opencv-python = "^4.5.1"
tqdm = "^4.59.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
